--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
 
-    <string name="app_name">For Calculate</string>
+    <string name="app_name">Dimc</string>
     <string name="imc">IMC</string>
-    <string name="peso">Digite seu peso em Kg (Ex: 67.00)</string>
-    <string name="altura">Digite sua altura (Ex: 1.70)</string>
-    <string name="calcular">Calcular</string>
-    <string name="bmi">BMI</string>
+    <string name="peso">Peso (Ex: 67.00)</string>
+    <string name="altura">Altura (Ex: 1.70)</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_home_start">Vamos lá</string>
+    <string name="btn_calcular">Calcular</string>
+    <string name="required">Obrigatório*</string>
 </resources>
